# sky-pi

./: .actrc  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-publish.yml
draw/: draw_to_display.py
screenshot/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: add_crontab.sh  edit_rasp_config.sh  install.sh  path_crontab.sh  reinstall.sh  rm_crontab.sh  screenshot.sh  setup.sh  start.sh  uninstall.sh
scripts/actions/: draw.sh  refresh.sh  screenshot.sh  start.sh
sky-pi-api-collection/sky-pi/: AA Dept Moon Phases.bru  NWS Gridpoint Forecast.bru  NWS Gridpoint.bru  NWS Points.bru  bruno.json
sky-pi-app/: package.json  pnpm-lock.yaml
sky-pi-app/scripts/: uninstall.sh
sky-pi-app/sky-pi-api-collection/sky-pi/: AA | Dept Moon Phases.bru  AA | Sunrise and Sunset Data.bru  Get Geo Data.bru  NWS - SWPC | Aurora Data.bru  NWS Gridpoint ADK Loj.bru  NWS Gridpoint.bru  NWS Points Keene Valley.bru  NWS Points.bru  NWS | Gridpoint ADK Loj.bru  NWS | Gridpoint.bru  NWS | Points Keene Valley.bru  NWS | Points.bru
sky-pi-app/sky-pi-api-collection/sky-pi/environments/: sky-pi-collection-env.bru
sky-pi-draw/: Dockerfile  LICENSE.txt  README.md  pyproject.toml
sky-pi-draw/src/sky_pi_draw/: __about__.py  __init__.py  draw.py  refresh.py
webapp/: README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/api/getIp/: route.ts
webapp/src/components/: ForecastCard.tsx  MoonPhaseCard.tsx
webapp/src/components/ui/: TypographyH3.tsx  TypographyP.tsx  badge.tsx  card.tsx
webapp/src/lib/utils/: date.ts  math.ts
webapp/src/server/api/: root.ts
webapp/src/types/: forecast.ts  moonphase.ts  nws.ts
(+3 files in other folders)
