[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sky-pi-draw"
dynamic = ["version"]
description = 'Renders weather screenshots to e-ink display'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Caleb Perry", email = "caleb@foxtrotperry.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "inky~=1.5.0",
  "pillow~=10.4.0",
  "pyinstaller~=6.10.0",
  "RPi.GPIO~=0.7.1",
]

[project.urls]
Documentation = "https://github.com/Caleb Perry/sky-pi-draw#readme"
Issues = "https://github.com/Caleb Perry/sky-pi-draw/issues"
Source = "https://github.com/Caleb Perry/sky-pi-draw"

[tool.hatch.version]
path = "src/sky_pi_draw/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sky_pi_draw tests}"

[tool.coverage.run]
source_pkgs = ["sky_pi_draw", "tests"]
branch = true
parallel = true
omit = [
  "src/sky_pi_draw/__about__.py",
]

[tool.coverage.paths]
sky_pi_draw = ["src/sky_pi_draw", "*/sky-pi-draw/src/sky_pi_draw"]
tests = ["tests", "*/sky-pi-draw/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
